fix: align content center in table head

--- a/src/styles/Transactions.css
+++ b/src/styles/Transactions.css
@@ -4,6 +4,7 @@ table {
 
 table thead th {
     line-height: 3;
+    align-content: center;
 }
 
 table .positive {
